fixed: uneven input box calc(100%/2-20px) fault

--- a/app.css
+++ b/app.css
@@ -5,12 +5,8 @@
     font-family: 'Gilroy', sans-serif;
 }
 
-
-    .category{
-        display: inline-block;
-    }
+    
     body{
-        font-size: 20px;
         display: flex;
         height: 100vh;
         justify-content: center;
@@ -31,7 +27,7 @@
         font-weight: 500;
         position: relative;
     }
-    .container .title ::before{
+    .container .title::before{
         content: '';
         position: absolute;
         left: 0;
@@ -41,16 +37,30 @@
         background: linear-gradient(135deg, #71b7e6,#9b59b6);
 
     }
+    form .user-details .input-box{
+        margin-bottom: 15px;
+         width: 45%;
+       
+     }
     .container form .user-details{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin: 20px 0 12px 0;
+        margin: 20px 0 10px 0;
+        
     }
-    form .user-details .input-box{
-       margin-bottom: 15px;
-        width: calc(100%/2 -20px);
-    }
+    
+    .user-details .input-box input {
+        height: 45px;
+        width: 100%;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 15px;
+        font-size: 16px;
+        border-bottom-width:2px ;
+        transition: all 0.3s ease;
+       }
     .user-details .input-box details{
         display: block;
         font-weight: 500;
@@ -67,21 +77,80 @@
      border: 1px solid #ccc;
      padding-left: 15px;
      font-size: 16px;
+      margin: 8px 0;
+      color: grey;
+      font-weight: 400;
     }
 
-    .user-details .input-box input {
-     height: 45px;
-     width: 100%;
-     outline: none;
-     border-radius: 5px;
-     border: 1px solid #ccc;
-     padding-left: 15px;
-     font-size: 16px;
-     border-bottom-width:2px ;
-     transition: all 0.3s ease;
-    }
+    
     .user-details .input-box input:focus,
     .user-details .input-box input:valid{
         border-color: #9b59b6;
 
     }
+    .feedback-form label{
+        display: block;
+        margin: 8px 0;
+        font-size: 16px;
+    }
+    .feedback-form textarea{
+        min-width: 100%;
+            height: 150px;
+            padding: 12px 20px;
+            box-sizing: border-box;
+           
+            border-radius: 4px;
+            background-color: #f8f8f8;
+            font-size: 16px;
+            resize: none;
+           
+        
+        outline: none;
+        border-radius: 5px;
+        border: 2px solid #ccc;
+        padding-left: 15px;
+        font-size: 16px;
+        border-bottom-width:2px ;
+        transition: all 0.3s ease;
+          
+    }
+
+    form .button{
+        height: 45px;
+        margin: 30px 0;
+    }
+    form .button input{
+        height: 100%;
+        width: 100%;
+        color: #fff;
+        border: none;
+        font-size: 18px;
+        font-weight: 500;
+        border-radius: 5px;
+        letter-spacing: 1px;
+        background: linear-gradient(135deg, #71b7e6,#9b59b6);
+
+    }
+    form .button input:hover{
+        background: linear-gradient(135deg, #71b7e6,#9b59b6);
+    }
+    @media (max-width :584px){
+        .container{
+            max-width: 100%;
+        }
+        .container form .user-details{
+            max-height: 300px;
+            overflow-y: scroll;
+         }
+        form .user-details .input-box{
+            margin-bottom: 15px;
+             width: 100%;
+
+           
+         }
+         
+         .user-details::-webkit-scrollbar{
+            width: none;
+         }
+    
+        }
